--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!-- </header> -->
     
     <nav class="content">
-        <img id="homepage_img" src="./HTML-CSS/img1.jpg" alt="homepage-image">
+        <img id="homepage_img" src="./img1.jpg" alt="homepage-image">
         <div id="homepage_content">
             <div id="homepage_content_title">Lorem, ipsum.</div>
             <div id="homepage_content_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
@@ -47,21 +47,21 @@
         <div id="menu_card_order"> Order Now</div>
         <div class="menu_card_order_menu">
             <div class="menu_card_order_1">
-                <center><img src="./HTML-CSS/img4.jpg" alt="image1"></center>
+                <center><img src="./img4.jpg" alt="image1"></center>
                 <div class="menu_card_order_1_description">
                     <h2>Burger</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, at.</p>
                 </div>
             </div>
             <div class="menu_card_order_1">
-                <center><img src="./HTML-CSS/img2.jpg" alt="image2"></center>
+                <center><img src="./img2.jpg" alt="image2"></center>
                 <div class="menu_card_order_1_description">
                     <h2>Pizza</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, at.</p>
                 </div>
             </div>
             <div class="menu_card_order_1">
-                <center><img src="./HTML-CSS/img3.jpg" alt="image3"></center>
+                <center><img src="./img3.jpg" alt="image3"></center>
                 <div class="menu_card_order_1_description">
                     <h2>Pasta</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, at.</p>
